@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-22T16:07:40Z",
-  "count_outdated" : 1268,
-  "uniques_outdated" : 680,
-  "count" : 1296,
-  "uniques" : 696,
+  "timestamp" : "2023-07-23T16:07:35Z",
+  "count_outdated" : 1270,
+  "uniques_outdated" : 681,
+  "count" : 1297,
+  "uniques" : 697,
   "clones" : [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 3,
@@ -127,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
