@@ -1,12 +1,7 @@
 {
-  "count": 28,
+  "count": 27,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 3,
@@ -70,6 +65,11 @@
     {
       "timestamp": "2023-07-22T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-23T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
