@@ -1,3 +1,12 @@
+2023-07-23T16:07:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5637405063 # 1756
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-23
+* notice: last 14d: unq all: 3 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 680 1268 / 696 1296
+* notice: next accum: outdated-unq outdated-all / unq all: 681 1270 / 697 1297
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-07-09] / [2023-07-23]
+
 2023-07-22T16:07:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5631553716 # 1753
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
